--- a/p3-exploration-sql.ipynb
+++ b/p3-exploration-sql.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le fichier `olympics.sqbpro` est un fichier ... texte"
+    "Le fichier `olympics.sqbpro` est un fichier ... binaire"
    ]
   },
   {
@@ -101,7 +101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Year , City , Sport, Discipline, Athletes, Country, Gender, Event, Medal"
+    "9 colonnes : Year , City , Sport, Discipline, Athletes, Country, Gender, Event, Medal  \n",
+    "nb de lignes : 31165"
    ]
   },
   {
@@ -116,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SELECT count(*)\n",
+    "SELECT count(*)  \n",
     "FROM summer;"
    ]
   },
@@ -138,7 +139,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SELECT MIN(Year), MAX(Year) FROM summer;"
+    "SELECT MIN(Year), MAX(Year)  \n",
+    "FROM summer;"
    ]
   },
   {
@@ -159,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SELECT DISTINCT Year, City\n",
+    "SELECT DISTINCT Year, City  \n",
     "FROM summer;"
    ]
   },
@@ -167,7 +169,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Résultat : 1896 Athens 1900 Paris 1904 St Louis 1908 London 1912 Stockholm 1920 Antwerp 1924 Paris 1928 Amsterdam 1932 Los Angeles 1936 Berlin 1948 London 1952 Helsinki 1956 Melbourne / Stockholm 1960 Rome 1964 Tokyo 1968 Mexico 1972 Munich 1976 Montreal 1980 Moscow 1984 Los Angeles 1988 Seoul 1992 Barcelona 1996 Atlanta 2000 Sydney 2004 Athens 2008 Beijing 2012 London"
+    "Résultat : 1896 Athens 1900 Paris 1904 St Louis 1908 London 1912 Stockholm 1920 Antwerp 1924 Paris 1928 Amsterdam 1932  \n",
+    "Los Angeles 1936 Berlin 1948 London 1952 Helsinki 1956 Melbourne / Stockholm 1960 Rome 1964 Tokyo 1968 Mexico 1972 Munich   \n",
+    "1976 Montreal 1980 Moscow 1984 Los Angeles 1988 Seoul 1992 Barcelona 1996 Atlanta 2000 Sydney 2004 Athens 2008 Beijing 2012 London"
    ]
   },
   {
@@ -195,13 +199,430 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--Q12. Quel est l’athlète qui a remporté le plus de médailles d’or ? (mayel)\n",
-    "--(Adaptation au top 10)\n",
-    "SELECT Athlete, Country, count(Medal) as nMedal\n",
-    "FROM summer\n",
-    "GROUP BY Athlete, Country\n",
-    "ORDER BY nMedal DESC\n",
+    "### Q1. Combien la France a remporté de médailles d’or aux JO de 1984 ? - (Christophe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT count(*)  \n",
+    "FROM summer  \n",
+    "WHERE Medal = \"Gold\" AND Country = \"FRA\" AND Year = \"1984\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultat : 21"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q2. Quel pays a le plus d’athlètes (toutes années confondues) ? (Matthias)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Country, count(DISTINCT Athlete)  \n",
+    "FROM summer  \n",
+    "GROUP BY Country  \n",
+    "ORDER BY count(DISTINCT Athlete) DESC  \n",
+    "LIMIT 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultats : USA : 3149"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q3. En 2012 combien de médailles le Japon a t-il gagné ? (Théo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Count(Medal)  \n",
+    "FROM summer  \n",
+    "WHERE Country = \"JPN\" AND Year = 2012  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultats : 84"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q4. Dans quels différents sports les Grecs ont-ils gagné des médailles ? - (Corentin L)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT  Sport  \n",
+    "FROM summer  \n",
+    "WHERE Country = \"GRE\"  \n",
+    "GROUP BY Sport\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultats :  \n",
+    "Aquatics\n",
+    "Athletics\n",
+    "Cycling\n",
+    "Fencing\n",
+    "Gymnastics\n",
+    "Judo\n",
+    "Rowing\n",
+    "Sailing\n",
+    "Shooting\n",
+    "Taekwondo\n",
+    "Tennis\n",
+    "Weightlifting\n",
+    "Wrestling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q5. Quel pays a remporté le plus de médailles d’or ? (Philippe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Country, Count(Medal)   \n",
+    "FROM summer    \n",
+    "WHERE Medal = \"Gold\"  \n",
+    "GROUP BY Country   \n",
+    "ORDER BY count(Medal) DESC   \n",
+    "LIMIT 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "résultats : USA, 2235"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q6. Combien de villes différentes ont accueilli les JO d’été entre 1896 - et 2012 ? (Yoann)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Count(DISTINCT City)   \n",
+    "FROM summer   \n",
+    "WHERE Year BETWEEN 1896 AND 2012"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultats : 22"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q7. Combien de femmes ont obtenu une médaille d’or ? (Lamia)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Count(Medal)   \n",
+    "FROM summer   \n",
+    "WHERE Gender = \"Women\" AND Medal = \"Gold\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultat : 2788"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q8. Combien de sports différents sont représentés par année ? (joris)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Year, Count(DISTINCT Sport)  \n",
+    "FROM summer   \n",
+    "GROUP BY Year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "résultat (cf screenshot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q9. Combien de fois Londres a accueilli les J.O ? (Marvin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT count(DISTINCT year)  \n",
+    "FROM summer    \n",
+    "WHERE City = \"London\"  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultat : 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q10. Combien de joueuses comptait la sélection brésilienne de volley-ball - médaillée d’or aux J.O de 2012 ? (Corentin P)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT count(Sport), Medal, Gender, Year, Country  \n",
+    "FROM summer  \n",
+    "WHERE Sport = \"Volleyball\" AND Gender = \"Women\" AND Medal = \"Gold\" AND Year = \"2012\" AND Country = \"BRA\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "résultat : 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q11. Combien de femmes françaises ont participé en 2012 , quel sont leurs - médailles ? (izak)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Count(DISTINCT Athlete),Gender, Year, Country  \n",
+    "FROM summer  \n",
+    "WHERE Year = \"2012\" AND Gender = \"Women\" AND Country = \"FRA\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "résultat : 29"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Medal as Medal, count(DISTINCT Athlete)  \n",
+    "FROM summer  \n",
+    "WHERE Gender = \"Women\" AND Year = 2012 AND Country = \"FRA\"  \n",
+    "GROUP BY Medal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultat : Bronze \"12\" / Gold \"4\" / Silver \"15\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### --Q12. Quel est l’athlète qui a remporté le plus de médailles d’or ? (mayel)\n",
+    "--(Adaptation au top 10)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT Athlete, Country, count(Medal) as nMedal  \n",
+    "FROM summer  \n",
+    "WHERE Medal = \"Gold\"  \n",
+    "GROUP BY Athlete, Country  \n",
+    "ORDER BY nMedal DESC  \n",
     "LIMIT 10;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "résultat : Phelps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q13. Est-ce que la France à déjà gagné une médaille d’or au cricket ? - (jordan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT count(Medal)   \n",
+    "FROM summer    \n",
+    "WHERE Country = \"FRA\" AND Sport = \"Cricket\" AND Medal =\"Gold\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultat : 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q14. Combien de médaillés ont un nom de famille de plus de 6 lettres en - excluant les années paires ? (jonathan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q15. Le nombre de médailles d’or par pays en 2012 (Maëlle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT DISTINCT Country as ACountry, count(Medal) as nMedal  \n",
+    "FROM summer  \n",
+    "WHERE Medal = \"Gold\" AND Year = \"2012\"  \n",
+    "GROUP BY ACountry  \n",
+    "ORDER BY nMedal DESC\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "résultat : cf screenshot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q16. Combien de femmes ont remporté des médailles ? (Alicia)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT count(DISTINCT Athlete)  \n",
+    "FROM summer  \n",
+    "WHERE Gender = \"Women\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultat : 5838"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q17. Entre 1984 et 2012 combien de médailles a gagné la France ? (Abire)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT count(*)  \n",
+    "FROM summer  \n",
+    "WHERE Year BETWEEN '1984' AND '2012'  AND Country = \"FRA\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "resultat : 482"
    ]
   },
   {
@@ -235,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
