--- a/p3-exploration-sql.ipynb
+++ b/p3-exploration-sql.ipynb
@@ -222,6 +222,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/1.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q2. Quel pays a le plus d’athlètes (toutes années confondues) ? (Matthias)"
    ]
   },
@@ -247,6 +254,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/2.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q3. En 2012 combien de médailles le Japon a t-il gagné ? (Théo)"
    ]
   },
@@ -264,6 +278,13 @@
    "metadata": {},
    "source": [
     "Résultats : 84"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/3.png \"Title\")"
    ]
   },
   {
@@ -307,6 +328,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/4.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q5. Quel pays a remporté le plus de médailles d’or ? (Philippe)"
    ]
   },
@@ -327,6 +355,13 @@
    "metadata": {},
    "source": [
     "résultats : USA, 2235"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/5.png \"Title\")"
    ]
   },
   {
@@ -356,6 +391,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/6.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q7. Combien de femmes ont obtenu une médaille d’or ? (Lamia)"
    ]
   },
@@ -373,6 +415,13 @@
    "metadata": {},
    "source": [
     "Résultat : 2788"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/7.png \"Title\")"
    ]
   },
   {
@@ -402,6 +451,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/8.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q9. Combien de fois Londres a accueilli les J.O ? (Marvin)"
    ]
   },
@@ -419,6 +475,13 @@
    "metadata": {},
    "source": [
     "Résultat : 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/9.png \"Title\")"
    ]
   },
   {
@@ -448,6 +511,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/10.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q11. Combien de femmes françaises ont participé en 2012 , quel sont leurs - médailles ? (izak)"
    ]
   },
@@ -461,12 +531,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "résultat : 29"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/11.png \"Title\")"
    ]
   },
   {
@@ -484,6 +559,13 @@
    "metadata": {},
    "source": [
     "Résultat : Bronze \"12\" / Gold \"4\" / Silver \"15\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/11-2.png \"Title\")"
    ]
   },
   {
@@ -517,6 +599,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/12.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q13. Est-ce que la France à déjà gagné une médaille d’or au cricket ? - (jordan)"
    ]
   },
@@ -540,13 +629,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](images/13.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q14. Combien de médaillés ont un nom de famille de plus de 6 lettres en - excluant les années paires ? (jonathan)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Merci jo, pas de JO les années impaires."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -559,6 +657,11 @@
    "source": [
     "### Q15. Le nombre de médailles d’or par pays en 2012 (Maëlle)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -605,6 +708,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Q17. Entre 1984 et 2012 combien de médailles a gagné la France ? (Abire)"
    ]
@@ -624,6 +732,11 @@
    "source": [
     "resultat : 482"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
