--- a/p3-exploration-sql.ipynb
+++ b/p3-exploration-sql.ipynb
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/5.png \"Title\")"
+    "<img src=\".png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/6.png \"Title\")"
+    "<img src=\"images/6.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/7.png \"Title\")"
+    "<img src=\"images/7.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/8.png \"Title\")"
+    "<img src=\"images/8.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -481,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/9.png \"Title\")"
+    "<img src=\"images/9.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -511,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/10.png \"Title\")"
+    "<img src=\"images/10.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/11.png \"Title\")"
+    "<img src=\"images/11.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -565,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/11-2.png \"Title\")"
+    "<img src=\"images/11-2.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -599,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/12.png \"Title\")"
+    "<img src=\"images/12.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -629,7 +629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/13.png \"Title\")"
+    "<img src=\"images/13.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -661,11 +661,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "SELECT DISTINCT Country as ACountry, count(Medal) as nMedal  \n",
     "FROM summer  \n",
@@ -679,6 +674,13 @@
    "metadata": {},
    "source": [
     "résultat : cf screenshot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/15.png\" width=\"500\"/>\n"
    ]
   },
   {
@@ -708,7 +710,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<img src=\"images/16.png\" width=\"500\"/>\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -736,7 +740,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<img src=\"images/17.png\" width=\"500\"/>\n"
+   ]
   },
   {
    "cell_type": "markdown",
